Fixed active + hover over, aligned getty quote

--- a/style.css
+++ b/style.css
@@ -56,6 +56,9 @@ body {
 .caption--size {
   font-size: 1.2rem;
 }
+.indent {
+  margin-left: 2em;
+}
 /*********************************/
 /*** HERO PAGE ***/
 /*********************************/
@@ -114,7 +117,8 @@ body {
 .bio-img-caption {
   font-weight: 500;
   text-align: center;
-  margin-bottom: 1rem;
+  margin-top: -18px;
+  margin-bottom: 4rem;
 }
 .bio-text-con {
   padding: 0 4rem;
@@ -161,6 +165,7 @@ body {
 }
 .quote-container {
   display: flex;
+  text-align: justify;
   flex-direction: column;
   gap: 1rem;
   width: 85rem;
@@ -314,6 +319,14 @@ body {
 .film-text-caption a:visited {
   text-decoration: none;
 }
+.film-text-caption a:hover {
+  text-decoration: none;
+  color: red;
+}
+.film-text-caption a:active {
+  text-decoration: none;
+  color: #000;
+}
 
 /*********************************/
 /*** Feature Films ***/
@@ -336,4 +349,8 @@ body {
 .footer a:hover {
   text-decoration: none;
   color: red;
+}
+.footer a:active {
+  text-decoration: none;
+  color: #000;
 }
